# GooseBot

./: .gitignore  CHANGELOG.md  LICENSE  PERMISOS.md  QUICKSTART.md  README.md  TODO.md  config.env.example  probe_tools.py  pyproject.toml  requirements.txt  run.py  test_setup.py
.goose/memory/: communication.txt  media-consumption.txt  music.txt  relationships.txt  residence.txt  values.txt
goosebot/: __init__.py  acp_client.py  bot.py  config.py  goose_client.py  session_manager.py
goosebot/handlers/: __init__.py  command_handler.py  message_handler.py
goosebot/tui/: __init__.py  app.py  events.py  logger_handler.py
goosebot/utils/: __init__.py  context.py  logger.py
